backend/src/tests/fixtures/photos/negative/photoTrim.fixture.ts
export default {
  caption: '  ',
  equipment: {
    camera: '1 ',
    lens: '  1',
  },
  location: ' ',
  settings: {
    aperture: ' 1',
    focalLength: '  1  ',
    iso: ' 1 ',
    shutterSpeed: '1  ',
  },
  storeLink: '       ',
  title: '    ',
};
